# FSx-for-ONTAP-S3AccessPoints-Serverless-Patterns

./: .bandit  .cfnlintrc  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.de.md  README.en.md  README.es.md  README.fr.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  ROADMAP.md  SECURITY.md  add_eventbridge_rules.py  conftest.py  pyproject.toml  pytest.ini  renovate.json  requirements-dev.txt  requirements.txt  ruff.toml  samconfig.sample.toml  samconfig.toml.example
.github/: PULL_REQUEST_TEMPLATE.md  security-config.yml
adtech-creative-management/: README.de.md  README.en.md  README.es.md  README.fr.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  samconfig.toml.example  template-deploy.yaml  template.yaml
agri-food-traceability/: README.de.md  README.en.md  README.es.md  README.fr.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  template.yaml
automotive-cae/: README.en.md  README.ko.md  README.md  README.zh-CN.md  samconfig.toml.example  template.yaml
autonomous-driving/: README.de.md  README.en.md  README.es.md  README.fr.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  template-deploy.yaml  template.yaml
cfn-params/: README.md  demo-mode.example.json  fpolicy-fargate.example.json  multi-stack-second.example.json  sap-erp-adjacent.example.json  uc1-legal-compliance.example.json
chemical-sds-management/: README.de.md  README.en.md  README.es.md  README.fr.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  samconfig.toml.example  template-deploy.yaml  template.yaml
construction-bim/: README.de.md  README.en.md  README.es.md  README.fr.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  template-deploy.yaml  template.yaml
content-edge-delivery/: README.de.md  README.en.md  README.es.md  README.md  README.zh-TW.md  samconfig.toml.example  template.yaml
defense-satellite/: README.de.md  README.en.md  README.es.md  README.fr.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  template-deploy.yaml  template.yaml
devops-flexclone-cicd/: README.de.md  README.en.md  README.es.md  README.fr.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md
docs/: ROADMAP.md  agentcore-mcp-remaining-issues.md  agentcore-mcp-tools.md  article-draft.md  article-en.md  article-phase10-en.md  article-phase10.md  article-phase12-en.md  article-phase12-ja.md  article-phase13-en.md  article-phase14-en.md  article-phase15-en.md  article-phase2-en.md  article-phase3-en.md  article-phase4-en.md  article-phase5-en.md  article-phase6-en.md  article-phase6a-en.md  article-phase6b-en.md  article-phase8-en.md  bedrock-inference-profiles.md  cdk-migration-evaluation.md  cdn-comparison.de.md  cdn-comparison.en.md  cdn-comparison.es.md  cdn-comparison.fr.md  cdn-comparison.ko.md  cdn-comparison.md  cdn-comparison.zh-CN.md  cdn-comparison.zh-TW.md  cdn-origin-verification-checklist.de.md  cdn-origin-verification-checklist.en.md  cdn-origin-verification-checklist.es.md  cdn-origin-verification-checklist.fr.md  cdn-origin-verification-checklist.ko.md  ci-cd-guide.md  (+148 more)
(+3098 files in other folders)
